core: refactor db ops boundaries