@@ -3,13 +3,15 @@ package yier.bubu.redis.command;
 import org.junit.Assert;
 import org.junit.Test;
 import yier.bubu.redis.db.YierdisDb;
-import yier.bubu.redis.protocol.RespArray;
-import yier.bubu.redis.protocol.RespBulkString;
-import yier.bubu.redis.protocol.RespError;
-import yier.bubu.redis.protocol.RespInteger;
-import yier.bubu.redis.protocol.RespObject;
-import yier.bubu.redis.protocol.RespSimpleString;
 import yier.bubu.redis.testutil.FastTestClient;
+import yier.bubu.redis.testutil.ReplyArray;
+import yier.bubu.redis.testutil.ReplyBulkString;
+import yier.bubu.redis.testutil.ReplyError;
+import yier.bubu.redis.testutil.ReplyInteger;
+import yier.bubu.redis.testutil.ReplyObject;
+import yier.bubu.redis.testutil.ReplyNull;
+import yier.bubu.redis.testutil.ReplyNullArray;
+import yier.bubu.redis.testutil.ReplySimpleString;
 
 import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
@@ -26,15 +28,15 @@ public class Milestone1CompatTest {
         forEachDb(db -> {
             YierdisFastCommandProcessor processor = new YierdisFastCommandProcessor(db);
             try (FastTestClient client = new FastTestClient(processor)) {
-                Assert.assertTrue(client.execute(Arrays.asList(b("SET"), b("k1"), b("v"))) instanceof RespSimpleString);
-                Assert.assertTrue(client.execute(Arrays.asList(b("SET"), b("k2"), b("v"))) instanceof RespSimpleString);
-                Assert.assertTrue(client.execute(Arrays.asList(b("SET"), b("k3"), b("v"))) instanceof RespSimpleString);
-                Assert.assertTrue(client.execute(Arrays.asList(b("SET"), b("x1"), b("v"))) instanceof RespSimpleString);
+                Assert.assertTrue(client.execute(Arrays.asList(b("SET"), b("k1"), b("v"))) instanceof ReplySimpleString);
+                Assert.assertTrue(client.execute(Arrays.asList(b("SET"), b("k2"), b("v"))) instanceof ReplySimpleString);
+                Assert.assertTrue(client.execute(Arrays.asList(b("SET"), b("k3"), b("v"))) instanceof ReplySimpleString);
+                Assert.assertTrue(client.execute(Arrays.asList(b("SET"), b("x1"), b("v"))) instanceof ReplySimpleString);
 
                 long cursor = 0L;
                 Set<String> seen = new HashSet<>();
                 for (int round = 0; round < 50; round++) {
-                    RespArray reply = (RespArray) client.execute(Arrays.asList(
+                    ReplyArray reply = (ReplyArray) client.execute(Arrays.asList(
                             b("SCAN"),
                             Long.toString(cursor).getBytes(StandardCharsets.US_ASCII),
                             b("MATCH"), b("k*"),
@@ -43,13 +45,13 @@ public class Milestone1CompatTest {
                     Assert.assertNotNull(reply.values());
                     Assert.assertEquals(2, reply.values().size());
 
-                    RespBulkString cursorOut = (RespBulkString) reply.values().get(0);
-                    RespArray keys = (RespArray) reply.values().get(1);
+                    ReplyBulkString cursorOut = (ReplyBulkString) reply.values().get(0);
+                    ReplyArray keys = (ReplyArray) reply.values().get(1);
 
                     cursor = Long.parseLong(new String(cursorOut.data(), StandardCharsets.US_ASCII));
                     if (keys.values() != null) {
-                        for (RespObject o : keys.values()) {
-                            seen.add(((RespBulkString) o).asString());
+                        for (ReplyObject o : keys.values()) {
+                            seen.add(((ReplyBulkString) o).asString());
                         }
                     }
                     if (cursor == 0L) {
@@ -70,18 +72,18 @@ public class Milestone1CompatTest {
         forEachDb(db -> {
             YierdisFastCommandProcessor processor = new YierdisFastCommandProcessor(db);
             try (FastTestClient client = new FastTestClient(processor)) {
-                Assert.assertTrue(client.execute(Arrays.asList(b("SET"), b("k"), b("v"))) instanceof RespSimpleString);
+                Assert.assertTrue(client.execute(Arrays.asList(b("SET"), b("k"), b("v"))) instanceof ReplySimpleString);
 
-                RespInteger pttlNoTtl = (RespInteger) client.execute(Arrays.asList(b("PTTL"), b("k")));
+                ReplyInteger pttlNoTtl = (ReplyInteger) client.execute(Arrays.asList(b("PTTL"), b("k")));
                 Assert.assertEquals(-1L, pttlNoTtl.value());
 
-                RespInteger persistNoTtl = (RespInteger) client.execute(Arrays.asList(b("PERSIST"), b("k")));
+                ReplyInteger persistNoTtl = (ReplyInteger) client.execute(Arrays.asList(b("PERSIST"), b("k")));
                 Assert.assertEquals(0L, persistNoTtl.value());
 
-                RespInteger pexpireZeroDeletes = (RespInteger) client.execute(Arrays.asList(b("PEXPIRE"), b("k"), b("0")));
+                ReplyInteger pexpireZeroDeletes = (ReplyInteger) client.execute(Arrays.asList(b("PEXPIRE"), b("k"), b("0")));
                 Assert.assertEquals(1L, pexpireZeroDeletes.value());
 
-                RespInteger ttlMissing = (RespInteger) client.execute(Arrays.asList(b("TTL"), b("k")));
+                ReplyInteger ttlMissing = (ReplyInteger) client.execute(Arrays.asList(b("TTL"), b("k")));
                 Assert.assertEquals(-2L, ttlMissing.value());
             }
         });
@@ -92,15 +94,15 @@ public class Milestone1CompatTest {
         forEachDb(db -> {
             YierdisFastCommandProcessor processor = new YierdisFastCommandProcessor(db);
             try (FastTestClient client = new FastTestClient(processor)) {
-                Assert.assertTrue(client.execute(Arrays.asList(b("SET"), b("k"), b("v"), b("EX"), b("5"))) instanceof RespSimpleString);
-                Assert.assertTrue(((RespInteger) client.execute(Arrays.asList(b("TTL"), b("k")))).value() > 0L);
+                Assert.assertTrue(client.execute(Arrays.asList(b("SET"), b("k"), b("v"), b("EX"), b("5"))) instanceof ReplySimpleString);
+                Assert.assertTrue(((ReplyInteger) client.execute(Arrays.asList(b("TTL"), b("k")))).value() > 0L);
 
-                RespBulkString old = (RespBulkString) client.execute(Arrays.asList(b("SET"), b("k"), b("v2"), b("KEEPTTL"), b("GET")));
+                ReplyBulkString old = (ReplyBulkString) client.execute(Arrays.asList(b("SET"), b("k"), b("v2"), b("KEEPTTL"), b("GET")));
                 Assert.assertEquals("v", old.asString());
-                Assert.assertTrue(((RespInteger) client.execute(Arrays.asList(b("TTL"), b("k")))).value() > 0L);
+                Assert.assertTrue(((ReplyInteger) client.execute(Arrays.asList(b("TTL"), b("k")))).value() > 0L);
 
-                RespBulkString nxGet = (RespBulkString) client.execute(Arrays.asList(b("SET"), b("k"), b("v3"), b("NX"), b("GET")));
-                Assert.assertTrue(nxGet.isNull());
+	                ReplyObject nxGet = client.execute(Arrays.asList(b("SET"), b("k"), b("v3"), b("NX"), b("GET")));
+	                Assert.assertTrue(nxGet instanceof ReplyNull);
             }
         });
     }
@@ -110,7 +112,7 @@ public class Milestone1CompatTest {
         forEachDb(db -> {
             YierdisFastCommandProcessor processor = new YierdisFastCommandProcessor(db);
             try (FastTestClient client = new FastTestClient(processor)) {
-                RespError err = (RespError) client.execute(Arrays.asList(b("SET"), b("k"), b("v"), b("NX"), b("XX")));
+                ReplyError err = (ReplyError) client.execute(Arrays.asList(b("SET"), b("k"), b("v"), b("NX"), b("XX")));
                 Assert.assertEquals("ERR syntax error", err.message());
             }
         });
@@ -121,11 +123,11 @@ public class Milestone1CompatTest {
         forEachDb(db -> {
             YierdisFastCommandProcessor processor = new YierdisFastCommandProcessor(db);
             try (FastTestClient client = new FastTestClient(processor)) {
-                Assert.assertTrue(client.execute(Arrays.asList(b("SET"), b("k"), b("v"))) instanceof RespSimpleString);
-                Assert.assertTrue(client.execute(Arrays.asList(b("FLUSHDB"), b("ASYNC"))) instanceof RespSimpleString);
-                Assert.assertTrue(((RespBulkString) client.execute(Arrays.asList(b("GET"), b("k")))).isNull());
+                Assert.assertTrue(client.execute(Arrays.asList(b("SET"), b("k"), b("v"))) instanceof ReplySimpleString);
+                Assert.assertTrue(client.execute(Arrays.asList(b("FLUSHDB"), b("ASYNC"))) instanceof ReplySimpleString);
+	                Assert.assertTrue(client.execute(Arrays.asList(b("GET"), b("k"))) instanceof ReplyNull);
 
-                RespError err = (RespError) client.execute(Arrays.asList(b("FLUSHDB"), b("X")));
+                ReplyError err = (ReplyError) client.execute(Arrays.asList(b("FLUSHDB"), b("X")));
                 Assert.assertEquals("ERR syntax error", err.message());
             }
         });
@@ -135,21 +137,17 @@ public class Milestone1CompatTest {
     public void lpopCountHandlesNullArrayAndEmptyArray() {
         forEachDb(db -> {
             YierdisFastCommandProcessor processor = new YierdisFastCommandProcessor(db);
-            try (FastTestClient client = new FastTestClient(processor)) {
-                RespBulkString missing = (RespBulkString) client.execute(Arrays.asList(b("LPOP"), b("nope")));
-                Assert.assertTrue(missing.isNull());
+		            try (FastTestClient client = new FastTestClient(processor)) {
+		                Assert.assertTrue(client.execute(Arrays.asList(b("LPOP"), b("nope"))) instanceof ReplyNull);
 
-                RespArray missingCount = (RespArray) client.execute(Arrays.asList(b("LPOP"), b("nope"), b("2")));
-                Assert.assertTrue(missingCount.isNull());
+		                Assert.assertTrue(client.execute(Arrays.asList(b("LPOP"), b("nope"), b("2"))) instanceof ReplyNullArray);
 
-                RespArray zeroCount = (RespArray) client.execute(Arrays.asList(b("LPOP"), b("nope"), b("0")));
-                Assert.assertFalse(zeroCount.isNull());
-                Assert.assertEquals(List.of(), zeroCount.values());
+		                ReplyArray zeroCount = (ReplyArray) client.execute(Arrays.asList(b("LPOP"), b("nope"), b("0")));
+		                Assert.assertEquals(List.of(), zeroCount.values());
 
-                RespError negative = (RespError) client.execute(Arrays.asList(b("LPOP"), b("nope"), b("-1")));
+                ReplyError negative = (ReplyError) client.execute(Arrays.asList(b("LPOP"), b("nope"), b("-1")));
                 Assert.assertEquals("ERR value is not an integer or out of range", negative.message());
             }
         });
     }
 }
-
